added images and edited text in projects

--- a/src/pages/2020-12-28.md
+++ b/src/pages/2020-12-28.md
@@ -2,6 +2,7 @@
 layout: post
 title: Hello internet!
 date: "2020-12-28"
+slug: "blog/hello-internet"
 ---
 
 This is my new blog. On this blog I will write about my coding and tinkering projects and share my thoughts on technology.
@@ -17,5 +18,3 @@ This summer I finally made the big step, when I applied to SALT, School of Appli
 # Blog-time!
 
 I created this blog to have a place to share my projects, experiences and thoughts as a developer and tinkerer. Internet offers a tons of places to share text and images, but I wanted a place where I could do this on my own premises and without any obstacles. I hope that my blog can be of help or inspiration to whomever may comes across it! Feel free to share your thoughts and feedback.
-
-Find more about me and my projects on my [Github profile](https://github.com/mountwebs).
