--- a/src/pages/2020-12-28.md
+++ b/src/pages/2020-12-28.md
@@ -5,7 +5,7 @@ date: "2020-12-28"
 slug: "blog/hello-internet"
 ---
 
-This is my new blog. On this blog I will write about my coding and tinkering projects and share my thoughts on technology.
+This is my new blog. On this blog I will write about my coding, tinkering projects and share my thoughts on technology.
 
 ## A bit about me and my journey
 
